refactor: adopt Math.clamp, VarHandle counters, and nullability annotations
Replace `Math.max(min, Math.min(value, max))` patterns with `Math.clamp`
across `AnthropicAdapter`, `RateLimitEngine`, and `VectorSearchResult`,
and migrate `AdaptiveSseFlushStrategy.FlushState` counter mutations to
`VarHandle` atomic operations via `recordLine`/`resetFlushCounters` for
thread-safe access from flush and record paths.

Annotate return types and parameters with `@Nullable` (JSpecify) on
methods that legitimately may return or accept null across
`ProxyController`, `KeyAuthFilter`, `CircuitBreakerConfig`,
`UniversalToolNormalizer`, and `BoundedLineBodyHandler.Spliterator.trySplit`.

Drop the now-unused `Collections.unmodifiableList` wrapper from
`SecretScannerRuleDatabase.getRules()` since the internal `RULES` list
is already immutable, and remove the redundant `@Transactional`
boundary from `PricingSyncService.upsert` since the public
`syncPricing` caller is already transactional.

Update `SecretLeakageException` and `PromptInjectionException` to use
`HttpStatus.UNPROCESSABLE_CONTENT` (the Spring 6.1+ replacement for the
deprecated `UNPROCESSABLE_ENTITY`), and switch `ProxyController` JSON
text accessors to the current `isString()`/`asString()` API.

Tests: remove redundant `SuppressWarnings("DataFlowIssue")` markers
where null handling is now explicit, replace wildcard
`org.mockito.ArgumentMatchers.*` imports with the specific matchers
actually used (`any`, `eq`, `anyString`), and remove casts on null
arguments that trip up modern static analyzers by binding them to
explicitly-typed local variables.